--- a/WEBB TEST 1/Login_page-index.html
+++ b/WEBB TEST 1/Login_page-index.html
@@ -9,6 +9,22 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <form action="">
+        <input
+          type="text"
+          name="Username"
+          id="Username"
+          placeholder="Username"
+        />
+        <input
+          type="password"
+          name="Password"
+          id="Password"
+          placeholder="Password"
+        />
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
   </body>
 </html>
