--- a/WEBB TEST 1/Login_page-index.html
+++ b/WEBB TEST 1/Login_page-index.html
@@ -10,21 +10,23 @@
   </head>
   <body>
     <div class="container">
-      <form action="">
-        <input
-          type="text"
-          name="Username"
-          id="Username"
-          placeholder="Username"
-        />
-        <input
-          type="password"
-          name="Password"
-          id="Password"
-          placeholder="Password"
-        />
-        <input type="submit" value="Submit" />
-      </form>
+      <div class="center-flex" id="login-box">
+        <form action="" class="center-flex">
+          <input
+            type="text"
+            name="Username"
+            id="Username"
+            placeholder="Username"
+          />
+          <input
+            type="password"
+            name="Password"
+            id="Password"
+            placeholder="Password"
+          />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
     </div>
   </body>
 </html>
