--- a/WEBB TEST 1/Login_page-index.html
+++ b/WEBB TEST 1/Login_page-index.html
@@ -9,23 +9,31 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="center-flex" id="login-box">
-        <form action="" class="center-flex">
-          <input
-            type="text"
-            name="Username"
-            id="Username"
-            placeholder="Username"
+    <div class="container web-background">
+      <div id="login-box"
+      class="login-styling">
+      <form 
+      action="" 
+      class="flex-center flex-column " 
+      id="login-box"
+      > 
+      <h1> LOGIN PAGE</h1>
+        <input
+          type="text"
+          name="username"
+          id="Username"
+          placeholder="Username"
           />
           <input
-            type="password"
-            name="Password"
-            id="Password"
-            placeholder="Password"
+          type="password"
+          name="password"
+          id="Password"
+          placeholder="Password"
           />
-          <input type="submit" value="Submit" />
+          <input type="submit"></input>
+          
         </form>
+      </div>  
       </div>
     </div>
   </body>
